--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 3,
-    "name": "Dad Jokes",
+    "name": "Laugh-with-Pops",
     "version": "0.0.1",
     "action": {
         "default_popup": "popup.html",
